# video-chat-app

./: README.md  docker-compose.yml  setup.sh
api/: .env.dev  .gitignore  Cargo.toml  Dockerfile
api/migrations/2022-01-29-140201_create_users/: up.sql
api/migrations/2022-01-29-140212_create_contacts/: up.sql
api/migrations/2022-01-29-140224_create_messages/: up.sql
api/sh/: setup.sh
api/src/: constants.rs  graphql.rs  handlers.rs  main.rs  schema.rs
api/src/auth/: user.rs
api/src/database/: entity.rs  schema.rs  service.rs
api/src/graphql/: mutation.rs  subscription.rs
api/src/graphql/auth/: mod.rs  password.rs  role.rs
api/src/graphql/form/: user.rs
api/src/graphql/model/: mod.rs
api/src/graphql/security/: guard.rs  mod.rs
backend/: .env.debug  .env.dev  .gitignore  Cargo.toml  Dockerfile  chat-app-api.service
backend/migrations/2022-01-29-140201_create_users/: up.sql
backend/migrations/2022-01-29-140224_create_messages/: down.sql  up.sql
backend/migrations/2022-04-26-072057_create_calls/: down.sql  up.sql
backend/migrations/2022-04-26-072103_create_email_verification_tokens/: down.sql  up.sql
backend/migrations/2022-04-26-072103_create_verify_email_tokens/: down.sql  up.sql
backend/migrations/2022-04-26-072114_create_password_reset_tokens/: down.sql  up.sql
backend/sh/: deploy.sh  setup.sh
backend/src/: constant.rs  constants.rs  graphql.rs  handler.rs  main.rs  main.rs.tls
backend/src/database/: entity.rs  mod.rs  schema.rs  service.rs
backend/src/database/sql/: get_latest_messages_for_each_user.sql  get_message_date_count.sql
backend/src/graphql/: mutation.rs  query.rs  subscription.rs
backend/src/graphql/common/: mail.rs  misc.rs  mod.rs  storage.rs
backend/src/graphql/common/mail/: builder.rs  mod.rs
backend/src/graphql/form/: ice_candidate.rs  message.rs  mod.rs  signal.rs  user.rs
backend/src/graphql/model/: call.rs  call_event.rs  contact.rs  ice_candidate.rs  latest_message.rs  message.rs  message_changed.rs  mod.rs  signal.rs  user.rs
backend/src/graphql/security/: mod.rs  validator.rs
backend/src/graphql/security/auth/: mod.rs  remember_me.rs
backend/src/graphql/security/crypto/: cipher.rs  hash.rs  mod.rs  random.rs
backend/src/structure/: claims.rs  identity.rs  mod.rs  remember_token.rs  shared.rs  token.rs
graphql/: .env.dev  Cargo.toml  Dockerfile
graphql/migrations/2022-01-29-140201_create_users/: up.sql
graphql/migrations/2022-01-29-140212_create_contacts/: down.sql  up.sql
graphql/migrations/2022-01-29-140224_create_messages/: up.sql
graphql/sh/: setup.sh
graphql/src/: constants.rs  graphql.rs  handlers.rs  main.rs
graphql/src/auth/: mod.rs  user.rs
graphql/src/database/: entity.rs  mod.rs  schema.rs  service.rs
graphql/src/database/sql/: get_latest_messages_for_each_contact.sql  get_latest_messages_for_each_user.sql
graphql/src/graphql/: mutation.rs  query.rs  subscription.rs
graphql/src/graphql/common/: mod.rs
graphql/src/graphql/form/: message.rs  user.rs
graphql/src/graphql/model/: chat_history.rs  contact.rs  history.rs  log.rs  message.rs  message_changed.rs  mod.rs  user.rs
graphql/src/graphql/security/: guard.rs  mod.rs  password.rs  random.rs  validator.rs
(+477 files in other folders)
