[package]
name = "links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
argonautica = "0.2.0"
async-graphql = "3.0.29"
async-graphql-actix-web = "3.0.28"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.21"
once_cell = "1.9.0"
