[package]
name = "chat-app-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-session = { version = "0.6.2", features = ["redis-actor-session"] }
actix-web = "4.0.1"
argonautica = "0.2.0"
async-graphql = { version = "3.0.38", features = ["log"] }
async-graphql-actix-web = "3.0.38"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
fancy-regex = "0.8.0"
fast_chemail = "0.9.6"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
once_cell = "1.10.0"
rand = "0.8.5"
send_wrapper = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
slab = "0.4.5"
thiserror = "1.0.30"
